# word_of_wisdom

./: .dockerignore  Cargo.toml  Dockerfile_client  Dockerfile_server  README.md  docker-compose.yml
client/: Cargo.toml
client/src/: client.rs  config.rs  main.rs
common_lib/: Cargo.toml
common_lib/src/: challenge.rs  lib.rs
server/: Cargo.toml
server/src/: config.rs  logging.rs  main.rs  quotes.rs  server.rs
server/static/: quotes.json
