[package]
name = "common_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
anyhow = "1.0.54"
log = "0.4.14"
rand = "0.8.5"
sha2 = "0.10.2"
hex = "0.4.3"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
