[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
anyhow = "1.0.54"
log = "0.4.14"
env_logger = "0.9.0"
lazy_static = "1.4.0"
rand = "0.8.5"
async-trait = "0.1.52"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
common_lib = { package = "common_lib", path = "../common_lib" }
